# adk-code-review-assistant

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml
code_review_assistant/: __init__.py  agent.py  agent_engine_app.py  config.py  constants.py  requirements.txt  tools.py
code_review_assistant/sub_agents/: __init__.py  code_analyzer.py  feedback_synthesizer.py  style_checker.py  test_runner.py
code_review_assistant/sub_agents/fix_pipeline/: __init__.py  code_fixer.py  fix_synthesizer.py  fix_test_runner.py  fix_validator.py
code_review_assistant/sub_agents/review_pipeline/: __init__.py  code_analyzer.py  feedback_synthesizer.py  test_runner.py
deployment/: deploy.py  deploy.sh
test_code_inputs/: failing_tests.py  good_code.py  needs_linting.py  test_cases.json
tests/: test_code_review_agent.py
